# llm-cooperation

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  jekyll-gh-pages.yml
docs/: Gemfile  LLM协作系统技术报告.md  _config.yml  api-reference.md  examples.md  getting-started.md  index.md
docs/_includes/: header.html
docs/_layouts/: default.html
docs/zh/: api-reference.md  examples.md  getting-started.md  index.md
examples/: aigcbest_demo.py  basic_usage.py  client_examples.py
llm_cooperation/: __init__.py  cli.py
llm_cooperation/config/: __init__.py  base_config.py  env_loader.py  model_configs.py
llm_cooperation/engines/: __init__.py  base_engine.py  openai_engine.py
llm_cooperation/managers/: __init__.py  model_manager.py
llm_cooperation/routing/: __init__.py  intelligent_router.py
llm_cooperation/schedulers/: __init__.py  cooperation_scheduler.py
llm_cooperation/server/: __init__.py  main.py
llm_cooperation/services/: __init__.py  application_service.py
llm_cooperation/tools/: __init__.py  config_cli.py  config_manager.py
scripts/: start_system.py
tests/: __init__.py  test_config.py  test_engines.py  test_integration.py
